apps/shokoserver/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shokoserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shokoserver
  template:
    metadata:
      labels:
        app: shokoserver
    spec:
      containers:
        - name: shokoserver
          image: ghcr.io/shokoanime/server:v5.1.0
          ports:
            - containerPort: 8111
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
            - name: config-volume
              mountPath: /home/shoko/.shoko
              subPath: shokoserver
            - name: media-volume
              mountPath: /mnt/anime
              subPath: media/anime
            - name: media-volume
              mountPath: /mnt/import
              subPath: public/downloads/anime/import
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 256Mi
        - name: config-volume
          persistentVolumeClaim:
            claimName: nfs-pvc
        - name: media-volume
          persistentVolumeClaim:
            claimName: media-pvc
