apps/shokoserver/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shokoserver-ingress
  annotations:
    traefik.ingress.k8s.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  rules:
    - host: shoko.veirt.web.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shokoserver-service
                port:
                  number: 8111
  tls:
    - hosts:
        - shoko.veirt.web.id
      secretName: shokoserver-tls
